:sparkles: Feat: add content with fragment, appendChild and createElement

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <div id="root"></div>
+    <div class="countries" id="countries"></div>
 </body>
 <script src="./methods.js"></script>
 <script src="./functions.js"></script>
