🐛 Fix in other work with git branching

--- a/index.html
+++ b/index.html
@@ -13,9 +13,20 @@
 <body>
     <div id="root"></div>
     <div class="countries" id="countries"></div>
+    <div>
+        <h1>---------------------------------------------</h1>
+        <button id="button-counter">Tracker Counter</button>
+        <h2 id="counter-view">0</h2>
+    </div>
+    <div>
+        <h1>---------------------------------------------</h1>
+        <input type="text" id="input-name" placeholder="Enter your name">
+        <h2 id="input-content"></h2>
+    </div>
 </body>
 <script src="./methods.js"></script>
 <script src="./functions.js"></script>
 <script src="./dom.js"></script>
+<script src="./events.js"></script>
 
 </html>
