Fix: Solved problem with search bar. Work finished

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <input id="input-search-animal" type="text" placeholder="Busca un animal . . . 🐈">
         <!-- Acá armamos una lista con los nombres de los animals ✔️ --> 
         <section>
-            <ul id="animal-list"></ul>
+            <ol id="animal-list"></ol>
         </section>
     </div>
 
