:feat: Add: Integrate AXIOS and destructuring

--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@
     </div>
 
 </body>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="./methods.js"></script>
 <script src="./functions.js"></script>
 <script src="./dom.js"></script>
 <script src="./events.js"></script>
-
+<script src="./asynchronism.js"></script>
 </html>
